[package]
name = "midi-playback"
description = "midi-playback."
version = "0.0.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
repository = "https://github.com/andrewhickman/midi-playback"
documentation = "https://docs.rs/midi-playback"
license = "MIT OR Apache-2.0"
readme = "README.md"
edition = "2018"

[dependencies]
midir = "0.7.0"
prost = "0.9.0"
anyhow = "1.0.51"
fs-err = "2.6.0"
tracing-subscriber = "0.3.3"
tracing = "0.1.29"

[dependencies.nwg]
package = "native-windows-gui"
version = "1.0.12"
